# Grouping_Points_Optimizer

./: CIndividual.cpp  CIndividual.h  CMakeLists.txt  CMySmartPointer.h  CRefCounter.cpp  CRefCounter.h  GaussianGroupingEvaluatorFactory.cpp  GroupingChallenge.cpp  GroupingEvaluator.cpp  Matrix.cpp  Matrix.h  Optimizer.cpp  Optimizer.h  README.md
